# mydeeptech-be

./: .env.example  .gitignore  ADMIN_API_DOCUMENTATION.md  ADMIN_DASHBOARD_DOCUMENTATION.md  ADMIN_ENDPOINTS_QUICK_REF.md  ADMIN_REPLY_FLOW_ANALYSIS.md  ADMIN_USERS_ENDPOINT.md  API_DOCUMENTATION_APPLICANT_REMOVAL.md  ASSESSMENT_API_DOCUMENTATION.md  ASSESSMENT_FRONTEND_API_DOCS.md  BREVO_FIX_DOCUMENTATION.md  BREVO_SYSTEM_AUDIT_COMPLETE.md  CHAT_ADMIN_DETECTION_FIX.md  CHAT_API_DOCUMENTATION.md  CLOUDINARY_SETUP_COMPLETE.md  DTUSER_DASHBOARD_DOCUMENTATION.md  DTUSER_ENDPOINTS_SECURE.md  ENHANCED_FRONTEND_CHAT_INTEGRATION_GUIDE.md  ENVIRONMENT_SETUP.md  EXPORT_CSV_API_DOCUMENTATION.md  FREELANCER_PAYMENT_DOCUMENTATION.md  FRONTEND_CHAT_INTEGRATION_GUIDE.md  FRONTEND_INTEGRATION_GUIDE.md  HVNC_Shift_Scheduling_API.md  INVOICING_API_DOCUMENTATION.md  INVOICING_SYSTEM_API_DOCS.md  INVOICING_SYSTEM_COMPLETE.md  MEDIA_API_DOCUMENTATION.md  MULTIMEDIA_ASSESSMENT_BACKEND_PRD.md  NOTIFICATION_API_DOCUMENTATION.md  PASSWORD_RESET_FRONTEND_GUIDE.md  PDF_UPLOAD_FIX_DOCUMENTATION.md  PROJECT_ANNOTATORS_LIST_DOCUMENTATION.md  PROJECT_DELETION_OTP_DOCUMENTATION.md  PROJECT_GUIDELINES_API_DOCS.md  PROJECT_GUIDELINES_IMPLEMENTATION_SUMMARY.md  PROJECT_MANAGEMENT_API_DOCS.md  PROJECT_SYSTEM_COMPLETE.md  README.md  RESULT_SUBMISSION_DOCUMENTATION.md  (+143 more)
.postman/: config.json
assessment/: assessment.json  (+1 more)
examples/: CMakeLists.txt  README.md  build.bat  bulk-payment-examples.js  bulk-transfer-example.js  dtuser-domain-usage-examples.js  hvnc-python-client-fixed.py  hvnc-python-client.py  hvnc-websocket-client-fixed.cpp  hvnc-websocket-client.cpp  hvnc-winhttp-client.cpp  optimized-controller-methods.js
(+598 files in other folders)
